--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "eslint-plugin-vue": "^9.25.0",
+    "sass": "^1.75.0",
     "vite-plugin-vuetify": "^2.0.3",
     "vuetify": "^3.5.16"
   }
